# lms-scripts-rs

./: .env.in  .gitignore  Cargo.toml  LICENSE  README.md
another-one/: Cargo.toml
another_one/: Cargo.toml
canvas_api/: Cargo.toml  README.md
canvas_api/src/: lib.rs
course_rounds/: Cargo.toml
course_rounds/src/: main.rs
enrollments_2020_p3_p4/: Cargo.toml
enrollments_2020_p3_p4/src/: main.rs
enrollments_course_rooms/: Cargo.toml
enrollments_course_rooms/src/: canvas_api.rs  kopps_api.rs  main.rs
enrollments_exam_rooms/: Cargo.toml
enrollments_exam_rooms/src/: main.rs
exam-rooms-enrollments/: Cargo.toml
exam-rooms-enrollments/src/: canvas_api.rs  main.rs
exam-rooms-to-canvas/: Cargo.toml
exam-rooms-to-canvas/src/: main.rs
kaltura_videos/: Cargo.toml
kaltura_videos/src/: kaltura_api.rs  main.rs
list_enrollments/: Cargo.toml  README.md
list_enrollments/src/: akt_api.rs  canvas_api.rs  kopps_api.rs  main.rs
todo-example/: Cargo.toml
todo-example/src/: main.rs
todo_example/: Cargo.toml  README.md
todo_example/src/: main.rs
users_without_sisid/: Cargo.toml  README.md
users_without_sisid/src/: main.rs
