[package]
name = "canvas_api"
version = "0.1.0"
authors = ["Carlos Saito <carlos@saito.style>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
