[package]
name = "enrollments_2020_p3_p4"
version = "0.1.0"
authors = ["Carlos Saito <carlos@saito.style>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
dotenv = "0.15.0"
canvas_api = { path = "../canvas_api" }
