[package]
name = "exam-rooms-enrollments"
version = "0.1.0"
authors = ["Carlos Saito <carlos@saito.style>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
canvas_api = { path = "../canvas_api" }
